--- a/.github/workflows/manual_update.yml
+++ b/.github/workflows/manual_update.yml
@@ -25,7 +25,7 @@ jobs:
     steps:
 
       - name: checkout repo content
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           fetch-depth: 0
@@ -38,6 +38,8 @@ jobs:
 
       - name: install python packages
         run: |
+          git config user.name github-actions
+          git config user.email github-actions@github.com
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
